# dpi-score

./: .gitignore  README.md  dpi_demo.ipynb  pyproject.toml  requirements.txt
dpi/: cnn.py  docking.py  grid.py  helper.py  inference.py  interface.py  model.py  network.py  prep.py  processor.py  similarity.py
example_output/H1157/: inference_results.csv  meta_labels.json
models/dynamicgrids_aug/: cfg.yaml
